Primer commit - Periódico Digital

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
     
     <!-- Bandera de Girardota -->
     <div class="flag-banner">
-      <img src="{{ site.institution.flag | relative_url }}" alt="Bandera de Girardota" class="flag-img">
+      <img src="{{ site.institution.flag }}" alt="Bandera de Girardota" class="flag-img">
     </div>
   </header>
 
