Primer commit - Periódico Digital

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,8 +69,8 @@
     </nav>
     
     <!-- Bandera de Girardota -->
-    <div class="flag-banner">
-      <img src="{{ site.institution.flag }}" alt="Bandera de Girardota" class="flag-img">
+  <div class="flag-banner">
+      <img src="/assets/images/bandera-girardota.png" alt="Bandera de Girardota" class="flag-img">
     </div>
   </header>
 
