--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,10 @@
       </div>
     </nav>
     
-
+    <!-- Bandera de Girardota -->
+  <div class="flag-banner">
+      <img src="../assets/images/bandera-girardota.png" alt="Bandesra de Girardota" class="flag-img">
+    </div>
   </header>
 
   <main>
