--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
     
     <!-- Bandera de Girardota -->
   <div class="flag-banner">
-      <img src="../assets/images/bandera-girardota.png" alt="Bandesra de Girardota" class="flag-img">
+      <img src="https://jusata.github.io/notiatanasiano/assets/images/bandera-girardota.png" alt="Bandesra de Girardota" class="flag-img">
     </div>
   </header>
 
