Primer commit - Periódico Digital

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,7 @@
       <div class="footer-grid">
         <div class="footer-section">
           <img src="{{ site.institution.logo | relative_url }}" alt="{{ site.institution.name }}" class="footer-logo">
+          <img src="https://jusata.github.io/notiatanasiano/assets/images/bandera-girardota.png" alt="Bandera de Girardota" class="flag-img">
           <h3>{{ site.institution.name }}</h3>
           <p>{{ site.institution.location }}</p>
         </div>
